Fix contact links in side bar, new mail generator

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
+		<script src="js/main.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -68,11 +69,11 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-xing"><span class="label">Xing</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/tino-junge" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://de.linkedin.com/in/tinojunge" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.xing.com/profile/Tino_Junge" class="icon fa-xing"><span class="label">Xing</span></a></li>
+							<li><a href="https://www.facebook.com/tino.junge" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><div id="side-nav-mail"></div></li>
 						</ul>
 				
 				</div>
@@ -178,21 +179,13 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p> You can get in touch with me by clicking one of the following icons.</p>
-							
 							<ul class="icons">
 								<li><a href="https://github.com/tino-junge" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://www.linkedin.com/pub/tino-junge/86/512/329" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://de.linkedin.com/in/tinojunge" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://www.xing.com/profile/Tino_Junge" class="icon fa-xing"><span class="label">Xing</span></a></li>
 								<li><a href="https://www.facebook.com/tino.junge" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<!--<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>-->
+								<li><div id="contact-mail"></div></li>
 							</ul>
-
-							<p> 
-								Or just write me an 
-								<script type="text/javascript">eval(unescape("%6e%6f%6f%6f%61%33%34%3d%5b%27%25%37%34%25%36%39%25%36%65%25%36%66%25%32%65%25%36%61%25%37%35%25%36%65%25%36%37%25%36%35%27%2c%5b%27%25%36%34%25%36%35%27%2c%27%25%36%38%25%37%30%25%36%39%27%2c%27%25%37%33%25%37%34%25%37%35%25%36%34%25%36%35%25%36%65%25%37%34%27%5d%2e%72%65%76%65%72%73%65%28%29%2e%6a%6f%69%6e%28%27%2e%27%29%5d%2e%6a%6f%69%6e%28%27%40%27%29%3b%6b%67%76%73%70%35%36%3d%27%65%2d%6d%61%69%6c%27%3b%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%6b%67%76%73%70%35%36%2e%6c%69%6e%6b%28%27%6d%61%69%27%2b%27%6c%74%6f%3a%27%2b%6e%6f%6f%6f%61%33%34%29%29%3b"));</script>
-							</p>
-
 						</div>
 					</section>
 			
